about text translation, remove old function, change skills tags data

--- a/index.html
+++ b/index.html
@@ -663,12 +663,13 @@
                         <h2 class="title_name animation_up" id="title_name">Jonathan Grajeda<span class="title_effect">_</span></h2>
                     </div>
                     <p class="about_text">
-                        Disfruto de crear, el medio es indiferente,
-                        <span class="animation_key" data-key="illustration">ilustrar</span>
-                        una de mis mayores pasiones, el
-                        <span class="animation_key" data-key="design">diseño</span>
-                        mi profesión, aunque ahora estoy muy interesado en
-                        <span class="animation_key" data-key="dev">desarrollo / web</span>, ya que me gustan los proyectos interactivos y diferentes.
+                        <span data-change data-es="Disfruto de crear, el medio es indiferente, " data-en="I enjoy creating, in all kind of media, ">Disfruto de crear, el medio es indiferente, </span>
+                        <span class="animation_key" data-key="illustration" data-change data-es="ilustrar" data-en="illustration">ilustrar</span>
+                        <span data-change data-es="una de mis mayores pasiones, " data-en="one of my bigges passionts,">una de mis mayores pasiones, </span>
+                        <span class="animation_key" data-key="design" data-change data-es="Diseño" data-en="design">diseño</span>
+                        <span data-change data-es="mi profesión, aunque ahora estoy muy interesado en" data-en="my profession, currently I've interest in ">mi profesión, aunque ahora estoy muy interesado en</span>
+                        <span class="animation_key" data-key="dev" data-change data-es="desarrollo / web" data-en="development / web">desarrollo / web</span>
+                        <span data-change data-es=", me gusta hacer proyectos originales y unicos." data-en=", I like to do original and unique projects">, ya que me gustan los proyectos interactivos y diferentes.</span>
                     </p>
                 </div>
 
@@ -4650,7 +4651,7 @@
                 </div>
                 <figcaption class="author_container">
                     <span class="author"><i>Kobe Bryant</i></span>
-                    <span class="author_info" data-change data-es="Jugador de la NBA" data-en="NBA Basketball Player"></span>
+                    <span class="author_info" data-change data-es="Ex Campeon De La NBA" data-en="NBA former champion">Ex Campeon De La NBA</span>
                 </figcaption>
             </figure>
         </div>
@@ -4696,7 +4697,7 @@
                 </div>
                 <figcaption class="author_container">
                     <span class="author"><i>Kobe Bryant</i></span>
-                    <span class="author_info" data-change data-es="Ex Campeon De La NBA" data-en="NBA Former Champeion">Ex Campeon De La NBA</span>
+                    <span class="author_info" data-change data-es="Ex Campeon De La NBA" data-en="NBA former champion">Ex Campeon De La NBA</span>
                 </figcaption>
             </figure>
         </div>
