about text spelling

--- a/index.html
+++ b/index.html
@@ -665,7 +665,7 @@
                     <p class="about_text">
                         <span data-change data-es="Disfruto de crear, el medio es indiferente, " data-en="I enjoy creating, in all kind of media, ">Disfruto de crear, el medio es indiferente, </span>
                         <span class="animation_key" data-key="illustration" data-change data-es="ilustrar" data-en="illustration">ilustrar</span>
-                        <span data-change data-es="una de mis mayores pasiones, " data-en="one of my bigges passionts,">una de mis mayores pasiones, </span>
+                        <span data-change data-es="una de mis mayores pasiones, " data-en="one of my biggest passion, ">una de mis mayores pasiones, </span>
                         <span class="animation_key" data-key="design" data-change data-es="Diseño" data-en="design">diseño</span>
                         <span data-change data-es="mi profesión, aunque ahora estoy muy interesado en" data-en="my profession, currently I've interest in ">mi profesión, aunque ahora estoy muy interesado en</span>
                         <span class="animation_key" data-key="dev" data-change data-es="desarrollo / web" data-en="development / web">desarrollo / web</span>
