page title change by lang

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="utf-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <title>John Krazy - Haciendo Ideas Realidad</title>
+        <title data-change data-es="John Krazy - Haciendo Ideas Realidad" data-en="John Krazy - Making Ideas Happend">John Krazy - Making Ideas Happend</title>
         <meta
             name="description"
             content="¡Bienvenido a mi mundo creativo! Soy diseñador, ilustrador y desarrollador web. Explora mi portafolio donde convergen colores vibrantes, líneas cautivadoras y código que cobra vida. Descubre cómo fusiono arte y tecnología para dar vida a proyectos únicos y sorprendentes. ¡Prepárate para un viaje visual que despierta la imaginación y desafía los límites!"
