--- a/index.html
+++ b/index.html
@@ -281,9 +281,9 @@
         </div>
         <div class="menu_controler phone_menu_controler">
             <div class="social_btns_container nav_menu_social_btns">
-                <a href="https://www.behance.net/jg_john_design" class="phone_menu_btn action_menu">
-                    <div class="icon_social_container">
-                        <svg class="icon_svg social_icon_svg behance_icon_svg" data-name="behance_icon_svg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 25 25">
+                <a href="https://www.behance.net/jg_john_design" class="phone_social_btn phone_menu_btn action_menu extra_btn">
+                    <div class="icon_container">
+                        <svg class="social_icon_svg behance_icon_svg icon_svg" data-name="behance_icon_svg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 25 25">
                             <title>Behance</title>
                             <path
                                 class="cls-1"
@@ -292,9 +292,9 @@
                         </svg>
                     </div>
                 </a>
-                <a href="https://github.com/JohnMcKrazy" class="phone_menu_btn action_menu">
-                    <div class="icon_social_container">
-                        <svg class="icon_svg social_icon_svg gitHub_icon_svg" data-name="gitHub_icon_svg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 25 25">
+                <a href="https://github.com/JohnMcKrazy" class="phone_social_btn phone_menu_btn action_menu extra_btn">
+                    <div class="icon_container">
+                        <svg class="social_icon_svg gitHub_icon_svg icon_svg" data-name="gitHub_icon_svg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 25 25">
                             <title>GitHub</title>
                             <path
                                 class="cls-1"
@@ -310,9 +310,9 @@
                         </svg>
                     </div>
                 </a>
-                <a href="https://api.whatsapp.com/send?phone=525614207862&text=Necesito informacion sobre tus servicios" class="phone_menu_btn">
-                    <div class="icon_social_container">
-                        <svg class="icon_svg social_icon_svg wa_icon_svg" data-name="wa_icon_svg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 25 25">
+                <a href="https://api.whatsapp.com/send?phone=525614207862&text=Necesito informacion sobre tus servicios" class="phone_social_btn phone_menu_btn extra_btn">
+                    <div class="icon_container">
+                        <svg class="social_icon_svg wa_icon_svg icon_svg" data-name="wa_icon_svg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 25 25">
                             <title>WhatsApp</title>
                             <path
                                 class="cls-1"
@@ -322,9 +322,9 @@
                         </svg>
                     </div>
                 </a>
-                <button class="contact_btn phone_menu_btn action_menu" tabindex="0">
-                    <div class="icon_social_container">
-                        <svg class="icon_svg social_icon_svg contact_icon_svg" data-name="contact_icon_svg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 25 18">
+                <button class="phone_social_btn contact_btn phone_menu_btn action_menu extra_btn" tabindex="0">
+                    <div class="icon_container">
+                        <svg class="social_icon_svg contact_icon_svg icon_svg" data-name="contact_icon_svg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 25 18">
                             <title>Correo</title>
                             <polygon class="cls-1" points="12.5 10.42 0 0 25 0 12.5 10.42" />
                             <polygon class="cls-1" points="16.05 9.06 25 16.79 25 1.6 16.05 9.06" />
@@ -370,7 +370,7 @@
                         </div>
                     </button>
                     <button type="button" class="nav_btn extra_btn lang_btn" name="lang_btn">
-                        <span class="label_btn label_lang icon_container extra_btn" data-change data-es="EN" data-en="ES"></span>
+                        <span class="label_btn label_lang" data-change data-es="EN" data-en="ES"></span>
                     </button>
                 </div>
                 <button type="button" class="extra_btn close_btn action_menu" id="menu_container_close_btn">
@@ -664,11 +664,11 @@
                     </div>
                     <p class="about_text">
                         <span data-change data-es="Disfruto de crear, el medio es indiferente, " data-en="I enjoy creating, in all kind of media, ">Disfruto de crear, el medio es indiferente, </span>
-                        <span class="animation_key" data-key="illustration" data-change data-es="ilustrar" data-en="illustration">ilustrar</span>
+                        <span class="accent_text" data-key="illustration" data-change data-es="ilustrar" data-en="illustration">ilustrar</span>
                         <span data-change data-es="una de mis mayores pasiones, " data-en="one of my biggest passions, ">una de mis mayores pasiones, </span>
-                        <span class="animation_key" data-key="design" data-change data-es="Diseño" data-en="design">diseño</span>
+                        <span class="accent_text" data-key="design" data-change data-es="Diseño" data-en="design">diseño</span>
                         <span data-change data-es="mi profesión, aunque ahora estoy muy interesado en" data-en="my profession, currently I've interest in ">mi profesión, aunque ahora estoy muy interesado en</span>
-                        <span class="animation_key" data-key="dev" data-change data-es="desarrollo / web" data-en="development / web">desarrollo / web</span>
+                        <span class="accent_text" data-key="dev" data-change data-es="desarrollo / web" data-en="development / web">desarrollo / web</span>
                         <span data-change data-es=", me gusta hacer proyectos originales y unicos." data-en=", I like to do original and unique projects">, ya que me gustan los proyectos interactivos y diferentes.</span>
                     </p>
                 </div>
@@ -4382,22 +4382,20 @@
                                     <path class="cls-38" d="m726.51,102.99h11.57l3.41,3.73v17.47l-3.56,3.88h-11.27l-3.56-3.73v-17.62l3.41-3.73Zm1.77,5.67v13.74l1.19,1.3h5.5l1.34-1.45v-13.59l-1.49-1.45h-5.2l-1.34,1.45Z" />
                                     <path class="cls-38" d="m747.84,102.99h4.36l.15.17h.15l-3.61,13.91h6.79v-13.76l.3-.32h4.68l.3.32v13.76h1.96l.3.32v3.89l-.3.32h-1.96v6.15l-.3.32h-4.53c-.3,0-.45-.7-.45-2.11v-4.36h-12.22l-.3-.32v-2.44c2.86-10.56,4.42-15.85,4.68-15.85Z" />
                                 </g>
-                                <path class="watch_dots" class="cls-38" d="m765.17,111.35h5.28l.28.27v5.27l-.28.27h-5.28l-.28-.27v-5.27l.28-.27Zm0,10.92h5.28l.28.27v5.27l-.28.27h-5.28l-.28-.27v-5.27l.28-.27Z" />
+                                <path class="watch_dots" d="m765.17,111.35h5.28l.28.27v5.27l-.28.27h-5.28l-.28-.27v-5.27l.28-.27Zm0,10.92h5.28l.28.27v5.27l-.28.27h-5.28l-.28-.27v-5.27l.28-.27Z" />
                                 <g class="watch_num-2" data-name="watch_num">
                                     <path class="cls-38" d="m776.62,102.99h11.72l3.39,3.51v8.96l-2.89,2.99h-9.19l-.89.9v4.3h12.72l.25.25v3.89l-.25.27h-17.89l-.25-.27v-10.78l2.89-2.98h9.19l.89-.92v-4.93l-1-1.04h-5.55l-1,1.04v2.07l-.25.27h-4.91l-.25-.27v-3.76l3.28-3.51Z" />
                                     <path class="cls-38" d="m797.65,102.99h11.57l3.41,3.73v17.47l-3.56,3.88h-11.27l-3.56-3.73v-17.62l3.41-3.73Zm1.77,5.67v13.74l1.19,1.3h5.5l1.34-1.45v-13.59l-1.49-1.45h-5.2l-1.34,1.45Z" />
                                 </g>
                                 <g class="watch_pm watch_mer">
-                                    <path class="cls-23" d="m826.06,110.51h10.99l2.61,2.61v6.23l-2.61,2.6h-7.24v5.9l-.23.22h-3.51l-.22-.22v-17.11l.22-.22Zm3.74,2.83v5.77h4.98l.9-.9v-3.97l-.9-.9h-4.98Z" />
+                                    <path d="m826.06,110.51h10.99l2.61,2.61v6.23l-2.61,2.6h-7.24v5.9l-.23.22h-3.51l-.22-.22v-17.11l.22-.22Zm3.74,2.83v5.77h4.98l.9-.9v-3.97l-.9-.9h-4.98Z" />
                                     <path
-                                        class="cls-23"
                                         d="m841.83,110.51h5.66c.23.19,1.59,4.79,4.08,13.82.16,0,1.11-3.17,2.83-9.51.84-2.87,1.33-4.31,1.47-4.31h5.66l.1.12h.12l.05,17.21-.39.22h-3.29l-.22-.22v-14.04h-.12c-2.64,9.51-4.08,14.26-4.31,14.26h-4.07c-.23,0-1.66-4.79-4.31-14.38h-.12v14.16l-.22.22h-2.95l-.22-.22v-17.11l.22-.22Z"
                                     />
                                 </g>
                                 <g class="watch_am watch_mer">
-                                    <path class="cls-23" d="m834.72,110.51c.24,0,1.9,5.81,4.98,17.44l-.12.12h-3.67c-.21-.12-.61-1.43-1.19-3.91h-5.69c-.52,2.61-.88,3.91-1.07,3.91h-3.32l-.23-.23,4.74-17.2.12-.12h5.45Zm-2.84,2.49l-2.01,8.06h4.15l-2.02-8.06h-.12Z" />
+                                    <path d="m834.72,110.51c.24,0,1.9,5.81,4.98,17.44l-.12.12h-3.67c-.21-.12-.61-1.43-1.19-3.91h-5.69c-.52,2.61-.88,3.91-1.07,3.91h-3.32l-.23-.23,4.74-17.2.12-.12h5.45Zm-2.84,2.49l-2.01,8.06h4.15l-2.02-8.06h-.12Z" />
                                     <path
-                                        class="cls-23"
                                         d="m841.83,110.51h5.66c.23.19,1.59,4.79,4.08,13.82.16,0,1.11-3.17,2.83-9.51.84-2.87,1.33-4.31,1.47-4.31h5.66l.1.12h.12l.05,17.21-.39.22h-3.29l-.22-.22v-14.04h-.12c-2.64,9.51-4.08,14.26-4.31,14.26h-4.07c-.23,0-1.66-4.79-4.31-14.38h-.12v14.16l-.22.22h-2.95l-.22-.22v-17.11l.22-.22Z"
                                     />
                                 </g>
