about salute new position

--- a/index.html
+++ b/index.html
@@ -655,12 +655,14 @@
             <div class="bg_section"></div>
             <div class="section_content content flex flex_responsive">
                 <div class="about_salute">
-                    <div class="swipe_animation_container_full">
-                        <h1 class="title_salute animation_up" id="title_salute" data-change data-es="Hola, soy" data-en="Hi, I'm"></h1>
-                    </div>
+                    <div class="about_animation">
+                        <div class="swipe_animation_container_full">
+                            <h1 class="title_salute animation_up" id="title_salute" data-change data-es="Hola, soy" data-en="Hi, I'm"></h1>
+                        </div>
 
-                    <div class="swipe_animation_container_full">
-                        <h2 class="title_name animation_up" id="title_name">Jonathan Grajeda<span class="title_effect">_</span></h2>
+                        <div class="swipe_animation_container_full">
+                            <h2 class="title_name animation_up" id="title_name">Jonathan Grajeda<span class="title_effect">_</span></h2>
+                        </div>
                     </div>
                     <p class="about_text">
                         <span data-change data-es="Disfruto de crear, el medio es indiferente, " data-en="I enjoy creating, in all kind of media, ">Disfruto de crear, el medio es indiferente, </span>
