refactored illustration animation

--- a/index.html
+++ b/index.html
@@ -716,7 +716,7 @@
                                     <path class="desk_tablet_screen" d="m733.78,327.86c1.88-5,7.46-9.96,10.83-10.75l146.19-33.89-30.82,81.8c-1.88,5-7.46,9.96-10.83,10.75l-146.23,33.95,30.85-81.87Z" />
                                 </g>
                             </g>
-                            <g class="dev_tablet_screen screen_hide">
+                            <g class="dev_tablet_screen screen_tablet_animation">
                                 <g>
                                     <polygon class="cls-38" points="823.7 380.3 709.63 406.39 742.79 318.98 856.86 292.9 823.7 380.3" />
                                     <polygon class="cls-47" points="852.47 373.72 823.7 380.3 856.86 292.9 885.63 286.32 852.47 373.72" />
@@ -897,7 +897,7 @@
                                     <path class="cls-29" d="m797.67,361.51l-17.28,3.95c-.91.21-1.32-.46-.93-1.49h0c.39-1.03,1.44-2.03,2.35-2.24l17.28-3.95c.91-.21,1.32.46.93,1.49h0c-.39,1.03-1.44,2.03-2.35,2.24Z" />
                                 </g>
                             </g>
-                            <g class="design_tablet_screen screen_hide">
+                            <g class="design_tablet_screen screen_tablet_animation">
                                 <path class="cls-65 tablet_base_design" d="m740.62,329.88c1.68-4.45,6.65-8.88,9.65-9.58l130.34-30.21-27.48,72.93c-1.68,4.45-6.65,8.88-9.65,9.58l-130.37,30.27,27.51-72.99Z" />
                                 <g>
                                     <g>
@@ -921,7 +921,7 @@
                                     </g>
                                 </g>
                             </g>
-                            <g class="illustration_tablet_screen screen_hide">
+                            <g class="illustration_tablet_screen screen_tablet_animation">
                                 <path class="cls-65 tablet_base_illustrator" d="m740.62,329.88c1.68-4.45,6.65-8.88,9.65-9.58l130.34-30.21-27.48,72.93c-1.68,4.45-6.65,8.88-9.65,9.58l-130.37,30.27,27.51-72.99Z" />
                                 <g class="wolverine">
                                     <path
@@ -2655,7 +2655,7 @@
                             </g>
                         </g>
                         <g class="desk_dev_icons">
-                            <g class="tags_icon_left dev_icon icon_hide">
+                            <g class="tags_icon_left dev_icon icon_animation">
                                 <g>
                                     <path class="cls-50" d="m437.79,211.5h-3.26v-4.28l13.28-26.51h3.21v4.38l-13.23,26.42Z" />
                                     <g>
@@ -2668,7 +2668,7 @@
                                     <path class="cls-41" d="m410.12,175.6l-7.69-7.69v-2.19h4.04l9.1,8.76v2.19l-9,8.76h-4.14v-2.19l7.69-7.64Z" />
                                 </g>
                             </g>
-                            <g class="tags_icon_right dev_icon icon_hide">
+                            <g class="tags_icon_right dev_icon icon_animation">
                                 <g>
                                     <path class="cls-50" d="m564.29,76.5h-3.26v-4.28l13.28-26.51h3.21v4.38l-13.23,26.42Z" />
                                     <g>
@@ -2681,7 +2681,7 @@
                                     <path class="cls-41" d="m536.62,40.59l-7.69-7.69v-2.19h4.04l9.1,8.76v2.19l-9,8.76h-4.14v-2.19l7.69-7.64Z" />
                                 </g>
                             </g>
-                            <g class="lines_icon_left dev_icon icon_hide">
+                            <g class="lines_icon_left dev_icon icon_animation">
                                 <rect class="cls-23" x="417.4" y="46.89" width="58.5" height="7.38" rx="3.35" ry="3.35" />
                                 <rect class="cls-50" x="403.95" y="46.89" width="10.83" height="7.38" rx="3.35" ry="3.35" />
                                 <rect class="cls-41" x="391.19" y="46.89" width="10.83" height="7.38" rx="3.35" ry="3.35" />
@@ -2697,7 +2697,7 @@
                                 <rect class="cls-41" x="482.9" y="89.38" width="16.12" height="7.38" rx="3.35" ry="3.35" />
                                 <rect class="cls-50" x="501.25" y="89.38" width="24.6" height="7.38" rx="3.35" ry="3.35" />
                             </g>
-                            <g class="lines_icon_right dev_icon icon_hide">
+                            <g class="lines_icon_right dev_icon icon_animation">
                                 <rect class="cls-23" x="506.63" y="184.92" width="58.5" height="7.38" rx="3.35" ry="3.35" />
                                 <rect class="cls-50" x="493.17" y="184.92" width="10.83" height="7.38" rx="3.35" ry="3.35" />
                                 <rect class="cls-41" x="480.41" y="184.92" width="10.83" height="7.38" rx="3.35" ry="3.35" />
@@ -2713,7 +2713,7 @@
                                 <rect class="cls-41" x="572.12" y="227.41" width="16.12" height="7.38" rx="3.35" ry="3.35" />
                                 <rect class="cls-50" x="590.48" y="227.41" width="24.6" height="7.38" rx="3.35" ry="3.35" />
                             </g>
-                            <g class="object_icon dev_icon icon_hide">
+                            <g class="object_icon dev_icon icon_animation">
                                 <g>
                                     <path
                                         class="cls-50"
@@ -2765,7 +2765,7 @@
                                     />
                                 </g>
                             </g>
-                            <g class="funct_icon dev_icon icon_hide">
+                            <g class="funct_icon dev_icon icon_animation">
                                 <path
                                     class="cls-41"
                                     d="m417.12,142.46c.19.33.39.64.39,1.09,0,.92-.58,1.84-1.89,1.84-.67,0-1.25-.28-1.64-.84-2.31-3.51-3.29-7.77-3.29-11.75s.97-8.24,3.29-11.75c.39-.58.97-.86,1.64-.86,1.31,0,1.89.92,1.89,1.87,0,.42-.2.75-.39,1.06-1.78,2.92-2.56,6.29-2.56,9.69s.78,6.74,2.56,9.66Z"
@@ -2790,7 +2790,7 @@
                             </g>
                         </g>
                         <g class="desk_desig_icons">
-                            <g class="column_right_icon design_icon icon_hide">
+                            <g class="column_right_icon design_icon icon_animation">
                                 <g class="column_right">
                                     <rect class="cls-56" x="509.1" y="161.24" width="34.41" height="75.07" rx="7.57" ry="7.57" />
                                     <rect class="cls-56" x="509.1" y="144.83" width="73.31" height="12.53" rx="4.37" ry="4.37" />
@@ -2798,7 +2798,7 @@
                                     <rect class="cls-56" x="548" y="197.86" width="34.41" height="30.98" rx="7.57" ry="7.57" />
                                 </g>
                             </g>
-                            <g class="column_left_icon design_icon icon_hide">
+                            <g class="column_left_icon design_icon icon_animation">
                                 <g class="column_left-2" data-name="column_left">
                                     <rect class="cls-56" x="462.16" y="27.3" width="17.2" height="12.52" rx="4.37" ry="4.37" />
                                     <rect class="cls-56" x="444.96" y="43.7" width="34.41" height="42.6" rx="7.57" ry="7.57" />
@@ -2810,47 +2810,47 @@
                                     <rect class="cls-56" x="406.07" y="27.3" width="52.34" height="12.52" rx="4.37" ry="4.37" />
                                 </g>
                             </g>
-                            <g class="logo_2_right_icon design_icon icon_hide">
+                            <g class="logo_2_right_icon design_icon icon_animation">
                                 <g class="logo_2_right-2" data-name="logo_2_right">
                                     <rect class="cls-56" x="541.97" y="94.36" width="41.08" height="7.93" rx="3.96" ry="3.96" />
                                     <circle class="cls-56" cx="562.51" cy="84.09" r="15.83" />
                                 </g>
                             </g>
-                            <g class="logo_1_right_icon design_icon icon_hide">
+                            <g class="logo_1_right_icon design_icon icon_animation">
                                 <g class="logo_1_right">
                                     <rect class="cls-56" x="510.07" y="73.93" width="33.54" height="6.47" rx="3.24" ry="3.24" />
                                     <rect class="cls-56" x="513.03" y="57.64" width="27.62" height="20.25" rx="10.13" ry="10.13" />
                                 </g>
                             </g>
-                            <g class="logo_1_left_icon design_icon icon_hide">
+                            <g class="logo_1_left_icon design_icon icon_animation">
                                 <g class="logo_1_left">
                                     <rect class="cls-56" x="408.15" y="216.9" width="41.08" height="7.93" rx="3.96" ry="3.96" />
                                     <circle class="cls-56" cx="428.7" cy="206.62" r="15.83" />
                                 </g>
                             </g>
-                            <g class="logo_2_left_icon design_icon icon_hide">
+                            <g class="logo_2_left_icon design_icon icon_animation">
                                 <g class="logo_2_left">
                                     <rect class="cls-56" x="448.3" y="198.83" width="33.54" height="6.47" rx="3.24" ry="3.24" />
                                     <rect class="cls-56" x="451.26" y="182.54" width="27.62" height="20.25" rx="10.13" ry="10.13" />
                                 </g>
                             </g>
-                            <g class="logo_3_left_icon design_icon icon_hide">
+                            <g class="logo_3_left_icon design_icon icon_animation">
                                 <g class="logo_3_left">
                                     <rect class="cls-56" x="436.25" y="173.83" width="24.1" height="4.84" rx="2.42" ry="2.42" />
                                     <rect class="cls-56" x="437.88" y="154.07" width="20.84" height="15.28" rx="5.44" ry="5.44" transform="translate(286.59 610.02) rotate(-90)" />
                                 </g>
                             </g>
-                            <circle class="cls-31 design_icon icon_hide" cx="384.46" cy="148.69" r="18.56" />
-                            <circle class="cls-49 design_icon icon_hide" cx="545.76" cy="146.88" r="21.47" />
-                            <polygon class="cls-68 design_icon icon_hide" points="610.49 194.74 567.38 224.56 614.76 246.98 610.49 194.74" />
-                            <polygon class="cls-52 design_icon icon_hide" points="507.41 47.61 473.29 71.22 510.8 88.96 507.41 47.61" />
-                            <polygon class="cls-66 design_icon icon_hide" points="559.72 14.02 534.1 22.34 534.1 49.28 559.72 57.6 575.55 35.81 559.72 14.02" />
-                            <polygon class="cls-42 design_icon icon_hide" points="445.23 204.13 435.93 225.01 452.92 240.31 472.72 228.88 467.97 206.52 445.23 204.13" />
-                            <rect class="cls-10 design_icon icon_hide" x="378.23" y="27.92" width="40.09" height="40.09" rx="4.6" ry="4.6" transform="translate(1.63 107.95) rotate(-15.47)" />
-                            <rect class="cls-55 design_icon icon_hide" x="474.7" y="137.53" width="33.34" height="33.34" rx="4.6" ry="4.6" transform="translate(252.95 -302.29) rotate(45)" />
+                            <circle class="cls-31 design_icon icon_animation" cx="384.46" cy="148.69" r="18.56" />
+                            <circle class="cls-49 design_icon icon_animation" cx="545.76" cy="146.88" r="21.47" />
+                            <polygon class="cls-68 design_icon icon_animation" points="610.49 194.74 567.38 224.56 614.76 246.98 610.49 194.74" />
+                            <polygon class="cls-52 design_icon icon_animation" points="507.41 47.61 473.29 71.22 510.8 88.96 507.41 47.61" />
+                            <polygon class="cls-66 design_icon icon_animation" points="559.72 14.02 534.1 22.34 534.1 49.28 559.72 57.6 575.55 35.81 559.72 14.02" />
+                            <polygon class="cls-42 design_icon icon_animation" points="445.23 204.13 435.93 225.01 452.92 240.31 472.72 228.88 467.97 206.52 445.23 204.13" />
+                            <rect class="cls-10 design_icon icon_animation" x="378.23" y="27.92" width="40.09" height="40.09" rx="4.6" ry="4.6" transform="translate(1.63 107.95) rotate(-15.47)" />
+                            <rect class="cls-55 design_icon icon_animation" x="474.7" y="137.53" width="33.34" height="33.34" rx="4.6" ry="4.6" transform="translate(252.95 -302.29) rotate(45)" />
                         </g>
                         <g class="illustration_icons">
-                            <g class="illustration_icon icon_hide">
+                            <g class="illustration_icon icon_animation">
                                 <g>
                                     <path class="cls-30" d="m535.85,83.25c-.29-.13-.53-.26-.76-.39-.24-.13-.46-.26-.69-.41-.23-.14-.45-.3-.66-.47-.22-.18-.43-.37-.62-.62.32-.02.61.03.89.12.28.09.54.21.79.37.25.16.47.35.66.58.19.23.35.5.4.82Z" />
                                     <path class="cls-30" d="m532.51,82.93l-.9-.75c-.29-.24-.58-.48-.87-.73-.29-.25-.57-.52-.83-.82-.26-.3-.5-.63-.66-1.02.38.18.71.38,1.03.59.32.21.64.45.93.71.3.26.57.56.81.89.23.34.42.72.47,1.13Z" />
@@ -3469,7 +3469,7 @@
                                     d="m551.17,172.88s.07.06.1.05c0-.01,0-.04,0-.05,0-.02-.03-.04-.05-.05-.01,0-.02,0-.03,0,0,0,0,0-.01,0-.01,0-.05,0-.04,0,0,0,0,0-.01,0-.02-.03,0-.06.02-.08.02-.02.06-.04.11-.04.05,0,.11,0,.2.04.04.09.05.15.04.2,0,.05-.02.09-.05.12-.03.03-.07.05-.15.06-.01,0-.03,0-.04,0,0,0-.05,0-.07,0h-.02s-.03-.01-.04-.02c-.03-.01-.05-.03-.06-.05-.01-.03-.02-.06-.01-.08.03-.05.06-.06.11-.06Z"
                                 />
                             </g>
-                            <g class="illustration_icon icon_hide">
+                            <g class="illustration_icon icon_animation">
                                 <path
                                     class="cls-30"
                                     d="m418.49,60.87l-.62-.05c-.21-.02-.41-.03-.62-.04l-.62-.03h-.62c-.82-.01-1.64,0-2.46.07-.82.06-1.64.13-2.47.2-.83.07-1.66.1-2.49.1-.42,0-.83-.02-1.25-.03l-.63-.05-.31-.02-.31-.04-.62-.07c-.2-.03-.4-.05-.61-.07-.4-.04-.8-.07-1.19-.07-.39,0-.78.03-1.15.11-.37.08-.71.21-1.01.4-.61.38-1,1.04-1.29,1.77-.15.37-.28.75-.42,1.14-.14.39-.3.79-.48,1.17-.35.77-.76,1.51-1.23,2.21-.24.35-.49.69-.75,1.02-.27.33-.54.65-.82.96-.29.31-.57.61-.87.9-.3.29-.6.58-.91.86-.61.56-1.23,1.11-1.83,1.66-.61.55-1.21,1.11-1.77,1.71-.28.29-.55.6-.82.91-.26.31-.5.64-.74.98-.46.67-.85,1.4-1.15,2.17.11-.4.24-.79.4-1.17.17-.38.35-.75.56-1.12.42-.72.92-1.39,1.45-2.03,1.08-1.27,2.3-2.4,3.47-3.56.58-.58,1.15-1.16,1.69-1.77.27-.3.52-.62.77-.94.24-.32.48-.65.69-.99.44-.68.82-1.38,1.15-2.12.16-.37.31-.74.45-1.12.14-.38.27-.78.43-1.18.16-.4.36-.8.61-1.17.13-.19.28-.36.44-.53.17-.16.35-.31.55-.43.39-.25.83-.41,1.27-.5.44-.09.88-.12,1.31-.11.43,0,.86.05,1.27.11.21.03.42.06.62.09l.6.08.3.04.3.03.61.06c.41.03.81.07,1.22.08.41.02.82.02,1.22.02.41,0,.82-.01,1.23-.02.82-.02,1.65-.06,2.48-.07.83,0,1.66.02,2.49.09.83.06,1.65.2,2.46.34Z"
@@ -3711,7 +3711,7 @@
                                             </g>
                                         </g>
                                     </g>
-                                    <g class="shield_screen screen_hide">
+                                    <g class="shield_screen screen_animation">
                                         <rect class="cls-19" x="385.11" y="305.42" width="97.72" height="97.72" />
                                         <g>
                                             <path class="cls-9" d="m393.41,323.72v-1.01l3.85-2.5v1.33l-2.64,1.65v.04l2.64,1.65v1.33l-3.85-2.5Z" />
@@ -3720,7 +3720,7 @@
                                         <rect class="cls-50" x="385.11" y="305.42" width="97.72" height="6.65" />
                                     </g>
 
-                                    <g class="design_screen screen_hide">
+                                    <g class="design_screen screen_animation">
                                         <rect class="cls-60" x="369.87" y="261.49" width="260.04" height="140.56" transform="translate(999.78 663.54) rotate(-180)" />
                                         <g id="computer_screen-2" data-name="computer_screen">
                                             <rect class="cls-64" x="369.87" y="261.49" width="260.04" height="6.23" transform="translate(999.78 529.21) rotate(-180)" />
@@ -3819,7 +3819,7 @@
                                             </g>
                                         </g>
                                     </g>
-                                    <g class="dev_screen screen_hide">
+                                    <g class="dev_screen screen_animation">
                                         <rect class="cls-3" x="438.44" y="267.94" width="188.2" height="126.88" />
                                         <rect class="cls-29" x="439.44" y="269.79" width="185.63" height="7.01" />
                                         <rect class="cls-50" x="437.87" y="262.78" width="188.77" height="5.16" />
@@ -3964,7 +3964,7 @@
                                         <rect class="cls-50" x="445.61" y="347.8" width="12.68" height="1.83" rx=".84" ry=".84" />
                                         <rect class="cls-3" x="441.27" y="347.34" width="2.76" height="2.76" rx=".37" ry=".37" />
                                     </g>
-                                    <g class="illustration_screen screen_hide">
+                                    <g class="illustration_screen screen_animation">
                                         <rect class="cls-60" x="369.87" y="261.49" width="260.04" height="140.56" transform="translate(999.78 663.54) rotate(-180)" />
                                         <g class="computer_screen">
                                             <rect class="cls-64" x="369.87" y="261.49" width="260.04" height="6.23" transform="translate(999.78 529.21) rotate(-180)" />
