--- a/index.html
+++ b/index.html
@@ -4941,9 +4941,11 @@
         <div class="card project_card" id="" tabindex="0">
             <img class="img_card" />
             <div class="info_project_container">
-                <h2 class="title" data-change></h2>
-                <h3 class="subtitle" data-change data-es="Realizado Con:" data-en="Made With:"></h3>
-                <div class="icons_project_container margin_bottom"></div>
+                <div class="project_basic_data">
+                    <h2 class="title" data-change></h2>
+                    <h3 class="subtitle" data-change data-es="Realizado Con:" data-en="Made With:"></h3>
+                    <div class="icons_project_container"></div>
+                </div>
                 <a href="" class="more_btn btn" tabindex="-1" data-link="" target="_blank" data-change data-es="Ir a" data-en="Go To">Ir A</a>
             </div>
         </div>
